# grpc/requests.go
@@ -5,8 +5,6 @@ import (
 
 	"github.com/gogo/protobuf/jsonpb"
 	"github.com/gogo/protobuf/proto"
-	"github.com/ovrclk/akash/types"
-	crypto "github.com/tendermint/go-crypto"
 )
 
 func Marshal(obj proto.Message) ([]byte, error) {
@@ -18,34 +16,34 @@ func Marshal(obj proto.Message) ([]byte, error) {
 	return buf.Bytes(), nil
 }
 
-func VerifySignature(request *types.GRPCRequest) (crypto.Address, error) {
-	buf := bytes.Buffer{}
-	marshaler := jsonpb.Marshaler{}
-	// switch v := request.Payload.(type) {
-	// case *types.GRPCRequest_ManifestRequest:
-	// 	if err := marshaler.Marshal(&buf, v.ManifestRequest); err != nil {
-	// 		return nil, err
-	// 	}
-	// default:
-	// 	return nil, types.ErrInvalidPayload{Message: "invalid payload"}
-	// }
+// func VerifySignature(request *types.GRPCRequest) (crypto.Address, error) {
+// 	buf := bytes.Buffer{}
+// 	marshaler := jsonpb.Marshaler{}
+// 	// switch v := request.Payload.(type) {
+// 	// case *types.GRPCRequest_ManifestRequest:
+// 	// 	if err := marshaler.Marshal(&buf, v.ManifestRequest); err != nil {
+// 	// 		return nil, err
+// 	// 	}
+// 	// default:
+// 	// 	return nil, types.ErrInvalidPayload{Message: "invalid payload"}
+// 	// }
 
-	if err := marshaler.Marshal(&buf, request.ManifestRequest); err != nil {
-		return nil, err
-	}
+// 	if err := marshaler.Marshal(&buf, request.ManifestRequest); err != nil {
+// 		return nil, err
+// 	}
 
-	key, err := crypto.PubKeyFromBytes(request.Key)
-	if err != nil {
-		return nil, err
-	}
+// 	key, err := crypto.PubKeyFromBytes(request.Key)
+// 	if err != nil {
+// 		return nil, err
+// 	}
 
-	sig, err := crypto.SignatureFromBytes(request.Signature)
-	if err != nil {
-		return nil, err
-	}
+// 	sig, err := crypto.SignatureFromBytes(request.Signature)
+// 	if err != nil {
+// 		return nil, err
+// 	}
 
-	if !key.VerifyBytes(buf.Bytes(), sig) {
-		return nil, types.ErrInvalidSignature{"invalud signature"}
-	}
-	return key.Address(), err
-}
+// 	if !key.VerifyBytes(buf.Bytes(), sig) {
+// 		return nil, types.ErrInvalidSignature{"invalud signature"}
+// 	}
+// 	return key.Address(), err
+// }
